# Python-Template

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
