[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = "A comprehensive Python environment for data engineering, analysis, and ML tasks."
authors = ["Marius Lupulescu <m.a.lupulescu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Data Processing and Analysis
pandas = "^2.0.0"
numpy = "^1.24.0"
polars = "^0.20.1"
dask = "^2023.5.0"
pyarrow = "^14.0.1"
modin = "^0.23.1"

# Machine Learning and Deep Learning
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
catboost = "^1.2"
torch = "^2.1.0"
transformers = "^4.35.0"
pytorch-lightning = "^2.1.0"

# Data Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
plotly = "^5.14.0"
bokeh = "^3.3.0"
altair = "^4.2.2"  # Changed to be compatible with great-expectations

# Big Data Tools
pyspark = "^3.4.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.6"
pymongo = "^4.5.0"
redis = "^5.0.1"
confluent-kafka = "^2.3.0"

# API Development and Integration
fastapi = "^0.104.0"
flask = "^2.1"
requests = "^2.31.0"
httpx = "^0.25.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"

# Web Scraping
beautifulsoup4 = "^4.12.0"
selenium = "^4.15.0"
scrapy = "^2.11.0"
playwright = "^1.39.0"

# File Handling and Data Formats
openpyxl = "^3.1.2"
python-docx = "^1.0.0"
pypdf2 = "^3.0.1"
python-pptx = "^0.6.21"
jsonlines = "^4.0.0"

# ETL Tools and Workflow
prefect = "^2.13.0"
great-expectations = "0.17.19"  # Pinned version
dbt-core = "^1.6.0"
dbt-postgres = "^1.6.0"

# Code Quality and Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.87.0"

# Utilities
tqdm = "^4.66.1"
python-dateutil = "^2.8.2"
croniter = "^2.0.1"
retry = "^0.9.2"
loguru = "^0.7.0"
joblib = "^1.3.0"
faker = "^19.10.0"

[tool.poetry.group.dev.dependencies]
# Development Tools
black = "^23.3.0"
pylint = "^2.17.0"
mypy = "^1.6.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
pre-commit = "^3.5.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.7"
ipykernel = "^6.26.0"
nbformat = "^5.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.messages_control]
disable = ["C0111", "C0103", "C0330", "C0326"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q --cov"