[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = "A comprehensive Python environment for data engineering, analysis, and ML tasks."
authors = ["Marius Lupulescu <m.a.lupulescu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Core Data Processing (Fast to install)
pandas = "^2.0.0"
numpy = "^1.24.0"

# Basic Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
plotly = "^5.14.0"

# Database & API
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.6"
fastapi = "^0.104.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

# Utilities
tqdm = "^4.66.1"
python-dateutil = "^2.8.2"
loguru = "^0.7.0"

# Dev
black = "^23.3.0"
pylint = "^2.17.0"
pytest = "^7.4.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[tool.poetry.group.ml.dependencies]
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
torch = "^2.1.0"
transformers = "^4.35.0"
pytorch-lightning = "^2.1.0"
lightgbm = "^4.1.0"
catboost = "^1.2"

[tool.poetry.group.viz.dependencies]
bokeh = "^3.3.0"
altair = "^4.2.2"

[tool.poetry.group.data.dependencies]
polars = "^0.20.1"
pyarrow = "^14.0.1"
dask = "^2023.5.0"
openpyxl = "^3.1.2"
modin = "^0.23.1"

[tool.poetry.group.api.dependencies]
pydantic = "^2.4.2"

[tool.poetry.group.db.dependencies]
pymongo = "^4.5.0"
redis = "^5.0.1"
confluent-kafka = "^2.3.0"

[tool.poetry.group.scraping.dependencies]
beautifulsoup4 = "^4.12.0"
selenium = "^4.15.0"
scrapy = "^2.11.0"
playwright = "^1.39.0"

[tool.poetry.group.etl.dependencies]
prefect = "^2.13.0"
great-expectations = "0.17.19"
dbt-core = "^1.6.0"
dbt-postgres = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
